          01  01.101'
          10  0101' .  {+} - new feature
          01  01'  .1  {#} - bug-fix
          0:  10   00  {^} - improvement
          :.  1    10  {-} - removed
          .   1    0:
              0.    :.
              .     .

--=========================( NEW SETTINGS AND FILES )==============================-

    NEW slftp.ini parameter(s):

    1. compare your slftp.ini with the provided one in /config folder
    2. update your helpfiles with the provided ones in /helpfiles folder
    3. enjoy!

--==============================( KNOWN BUGS )====================================-

    Setting !maxupdn to 0 for upload/download leads to problems -> generating gillions of queued tasks
    Statsoutput sometimes screwed -> NEGATIVE BYTES (due to parsing of x-dupe response)
    Dirlist confusion on linux development builds causing wrong skip files output (#265)

--=============================( SLFTP v1.5.10 )==================================-


--=============================( SLFTP v1.5.9 )===================================-
    {+} Support 'site search' cmd to find requests, use setting use_site_search_on_reqfill in ini or !usesitesearchonreqfill per site
    {#} sort destinations on KB level to make sure the highest ranked sites get race tasks created first before the queue sort
    {#} Fixed an issue which could cause autodirlists to stop working on very busy sites when queue clean is enabled
    {#} Rules for all sites (*) were not being persisted if split_site_data was enabled. Those are now saved into {admin_sitename}.rtpl
    {^} Allow to disable creating the 'already on site' dir when req filling by setting create_already_on_site_in_directory=0 (#302)
    {^} Allow to disable the file compare to determine a complete request by setting compare_files_for_reqfilled_fallback=0
    {^} Allow to fill requests that are on the site already by setting fill_already_on_site=1
    {^} Reset auto disabled NFO download for sites to enabled on 'SITE UP'