@@ -51,7 +51,7 @@ const
     'section' {, 'preurl', 'mysql'});
 
   { Declarations of all IRC commands as @link(TIrcCommand) records }
-  ircCommandsArray: array[1..222] of TIrcCommand = (
+  ircCommandsArray: array[1..223] of TIrcCommand = (
     (cmd: 'GENERAL'; hnd: IrcHelpHeader; minparams: 0; maxparams: 0; hlpgrp: '$general'),
     (cmd: 'help'; hnd: IrcHelp; minparams: 0; maxparams: 1; hlpgrp: 'general'),
     (cmd: 'die'; hnd: IrcDie; minparams: 0; maxparams: 0; hlpgrp: 'general'),
@@ -99,6 +99,7 @@ const
     (cmd: 'setdownoutofspace'; hnd: IrcSetDownOnOutOfSpace; minparams: 1; maxparams: 2; hlpgrp: 'site'),
     (cmd: 'reversefxp'; hnd: IrcSetReverseFxp; minparams: 1; maxparams: 3; hlpgrp: 'site'),
     (cmd: 'usesitesearchonreqfill'; hnd: IrcUseSiteSearchOnReqfill; minparams: 1; maxparams: 2; hlpgrp: 'site'),
+    (cmd: 'reducedspeedstatweight'; hnd: IrcReducedSpeedstatWeight; minparams: 1; maxparams: 2; hlpgrp: 'site'),
 
     (cmd: 'ROUTES'; hnd: IrcHelpHeader; minparams: 0; maxparams: 0; hlpgrp: '$route'),
     (cmd: 'routes'; hnd: IrcSpeeds; minparams: 1; maxparams: 1; hlpgrp: 'route'),
